fix data page download / github button spacing

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -67,7 +67,6 @@
 
 .download-data-btn.ui.button {
     background-color: $stone-cold-steve-austin;
-    width: 100% !important;
     a {
         color: white;
     }
@@ -348,8 +347,4 @@
 .link {
     text-decoration: underline;
     font-weight: 900;
-}
-
-.full-width-button {
-    width: 100%;
 }
